[package]
name = "synclite"
version = "0.1.0"
edition = "2021"
description = "SQLite replication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fmeringdal/synclite"
keywords = ["database", "async", "sqlite"]
categories = ["database", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
