[package]
name = "synclite"
version = "0.2.0"
edition = "2021"
description = "SQLite replication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fmeringdal/synclite"
keywords = ["database", "async", "sqlite"]
categories = ["database", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
bytes = "1"
futures = "0.3"
notify = { version = "6.0.0", default-features = false, features = ["macos_kqueue"] }
rand = "0.8"
strum = "0.24"
strum_macros = "0.24"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1", features = [ "fs", "macros" ] }
tracing = "0.1"

[dev-dependencies]
env_logger = "0.9"
uuid = { version = "1.3", features = ["v4"] }